2017-09-12  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r29548.

	* src/attack.c: Define PROGRESS_BAR_STYLE.
	(attack_host): Add preprocessor directives to switch the progress
	bar style. In case of a dead host, it sends max_ports = -1 to the
	manager, and it will not be taken into account to calculate the scan
	progress.

2017-09-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginload.c: Revert r29045.

2017-09-08  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r29523 with adjustments due to code change.

	* src/openvassd.c: Include ../misc/vendorversion.h.
	(main) Add new command line option vendor-version. Set vendor_version
	if it was passed as parameter.

2017-09-05  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r28157 with adjustments due to code changes.

	A connection failures to the redis-server is considered fatal to the
	running scan, meaning that it is stopped immediately and send an
	'Error' result.

	* src/attack.c: Define new error type ERR_REDIS_CONN.
	(launch_plugin): Check access to the knowledge base. If a
	problem is found, return an error and the running scan is stoped.
	(attack_host): Adds an item to the host knowledge base. After launch
	the plugin check if there was an error trying to connect to the
	redis-server. In that case send a error message.

2017-07-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r28888.

	* src/pluginload.c (plugin_reload_from_dir): Call nasl_clean_inc().

2017-07-06  Michael Wiegand <michael.wiegand@greenbone.net>

	Start preparing openvas-scanner 5.1.2 release.

	* CHANGES: Add partly complete changes for 5.1.2.

	* CMakeLists.txt: Bump libopenvas dependency to 9.0.2.

	* INSTALL: Document increased minimum version for libopenvas.

2017-06-29  Juan Jose Nicola  <juan.nicola@greenbone.net>

	Backport r28861. 

	* src/nasl_plugins.c (nasl_plugin_add): Set the preference's name to
	Timeout instead of Script timeout.
