@@ -1,3 +1,10 @@
+2017-09-27  Juan Jose Nicola  <juan.nicola@greenbone.net>
+
+	* src/openvassd.c (check_kb_status): New function. Check if Redis
+        Server is up and if the KB exists. If KB does not exist force a reload.
+        (main_loop): Call new function.
+
+
 2017-09-12  Juan Jose Nicola  <juan.nicola@greenbone.net>
 
 	Backport r29548.
